clusters/production/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "qbittorrent.production.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8080
